--- a/index.html
+++ b/index.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
-    <html lang="en">
-      <head>
-        <meta charset="utf-8">
-        <link rel="stylesheet" href="main.css">
-        <title>ストップウォッチ</title>
-      </head>
+<html lang="en">
+ <head>
+  <meta charset="utf-8">
+   <link rel="stylesheet" href="main.css">
+   <title>ストップウォッチ</title>
+ </head>
  
-     <body>
-        <h3>ストップウォッチ</h3>
- 
-        <div id="timer">0:0:0:0</div>
-        <button id ="start" onclick="startTimer()">スタート</button>
-        <button id ="stop" onclick="stopTimer()">ストップ</button>
-        <button id ="reset" onclick="resetTimer()">リセット</button>
- 
-       <script type="text/javascript"  src="main.js" charset="utf-8"></script>
-       <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
-     </body>
-   </html>
+ <body>
+  <h3>ストップウォッチ</h3>
+   <div id="timer">0:0:0:0</div>
+   <button id ="start">スタート</button>
+   <button id ="stop">ストップ</button>
+   <button id ="reset">リセット</button>
+  
+  <script type="text/javascript"  src="main.js" charset="utf-8"></script>
+  <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
+ </body>
+</html>
